--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 server:
   port: 8080
 spring:
+  profiles:
+    active:
+    - dev
   application:
     name: employee-management-backend-app
   datasource:
